[package]
name = "BulbaTV"
version = "0.1.0"
edition = "2024"
authors = ["https://github.com/vladimir2090"]

[dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
hex = "0.4"
lava_torrent = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
percent-encoding = "2.3"